# Cognia

./: .eslintrc.base.json  .gitignore  .lintstagedrc.json  .windsurfrules  AGENTS.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  README_zh.md  TESTING.md  WARP.md  build-output.txt  eslint.config.mjs  jest.config.ts  jest.setup.ts  mkdocs.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  test-output.txt  test-results.txt  tmp-components-native-tests.json  tmp-context-tests.json  tmp-native-failures.json  tsconfig.base.json  tsconfig.json
plugin-sdk/python/: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
plugin-sdk/python/cognia/: __init__.py  a2ui.py  cli.py  clipboard.py  context.py  decorators.py  ipc.py  modes.py  plugin.py  runtime.py  testing.py  types.py
plugin-sdk/python/examples/a2ui_dashboard/: main.py  plugin.json
plugin-sdk/python/examples/custom_mode/: main.py  plugin.json
plugin-sdk/python/examples/data_analysis/: main.py  plugin.json
plugin-sdk/python/examples/rag_integration/: main.py  plugin.json
plugin-sdk/python/examples/session_manager/: main.py  plugin.json
plugin-sdk/python/examples/theme_customizer/: main.py  plugin.json
plugin-sdk/python/src/cognia/: __init__.py  capability_contract.py  cli.py  debug.py  decorators.py  dependencies.py  message_bus.py  plugin.py  profiler.py  schema.py  types.py  version.py
plugin-sdk/python/tests/: __init__.py  conftest.py  test_a2ui.py  test_cli.py  test_context.py  test_decorators.py  test_decorators_extended.py  test_ipc.py  test_modes.py  test_plugin.py  test_runtime.py  test_schema.py  test_types.py  test_types_extended.py
src-tauri/: CLAUDE.md  Cargo.toml  check_output.txt  check_result.txt  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: http.rs  lib.rs  main.rs  port_utils.rs  tray.rs
src-tauri/src/assistant_bubble/: bubble_window.rs  mod.rs
src-tauri/src/awareness/: activity_tracker.rs  focus_tracker.rs  mod.rs  smart_suggestions.rs  system_monitor.rs
src-tauri/src/chat_runtime/: commands.rs  migrations.rs  mod.rs  models.rs  storage.rs
src-tauri/src/chat_widget/: chat_window.rs  mod.rs
src-tauri/src/commands/: api.rs  assistant_bubble.rs  awareness.rs  chat_widget.rs  clipboard.rs  compatibility.rs  context.rs  environment.rs  git.rs  input_completion.rs  jupyter.rs  local_provider.rs  mcp.rs  mod.rs  model_download.rs  ocr.rs  ollama.rs  plugin.rs  port.rs  proxy.rs  sandbox.rs  scheduler.rs  screen_recording.rs  screenshot.rs  selection.rs  skill.rs  speedpass_runtime.rs  vector.rs  window_diagnostics.rs  workflow_runtime.rs
src-tauri/src/commands/academic/: mod.rs  storage.rs  tests.rs  types.rs
src-tauri/src/commands/cloud/: convex.rs  mod.rs
src-tauri/src/commands/context/: awareness.rs  context.rs  mod.rs
src-tauri/src/commands/devtools/: git.rs  git2_ops.rs  git2_ops_desktop.rs  git_credentials.rs  git_error.rs  git_history.rs  jupyter.rs  lsp.rs  lsp_events.rs  lsp_installer.rs  lsp_registry.rs  lsp_resolver.rs  mod.rs  sandbox.rs  vcs.rs
src-tauri/src/commands/extensions/: mod.rs  plugin.rs  skill.rs  skill_seekers.rs
src-tauri/src/commands/media/: mod.rs  ocr.rs  screen_recording.rs  screenshot.rs
src-tauri/src/commands/providers/: api.rs  local_provider.rs  mcp.rs  mod.rs  ollama.rs
src-tauri/src/commands/storage/: mod.rs  model_download.rs
src-tauri/src/commands/system/: clipboard.rs  environment.rs  mod.rs  process.rs  proxy.rs  tray.rs
src-tauri/src/commands/vector/: tests.rs
src-tauri/src/commands/window/: assistant_bubble.rs  chat_widget.rs  clipboard_commands.rs  mod.rs  selection.rs  smart_selection_commands.rs  window_diagnostics.rs
src-tauri/src/context/: app_context.rs  browser_context.rs  editor_context.rs  file_context.rs  mod.rs  screen_content.rs  window_info.rs
src-tauri/src/convex/: client.rs  config.rs  error.rs  mod.rs
src-tauri/src/external_agent/: commands.rs  mod.rs  process.rs  terminal.rs
src-tauri/src/input_completion/: completion_service.rs  config.rs  ime_state.rs  keyboard_monitor.rs  mod.rs  types.rs
src-tauri/src/jupyter/: kernel.rs  mod.rs  protocol.rs  session.rs
src-tauri/src/mcp/: client.rs  config.rs  error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/mcp/protocol/: jsonrpc.rs  mod.rs  prompts.rs  resources.rs  sampling.rs  tools.rs
src-tauri/src/mcp/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
src-tauri/src/plugin/: api_gateway.rs  manager.rs  metrics.rs  mod.rs  python.rs  signature.rs  types.rs  watcher.rs
src-tauri/src/process/: mod.rs  unix.rs  windows.rs
src-tauri/src/sandbox/: db.rs  docker.rs  languages.rs  mod.rs  native.rs  podman.rs  runtime.rs  workspace.rs
src-tauri/src/scheduler/: error.rs  linux.rs  macos.rs  metadata_store.rs  mod.rs  service.rs  types.rs  windows.rs
src-tauri/src/screen_recording/: click_highlight.rs  error.rs  ffmpeg.rs  history.rs  mod.rs  progress.rs  recorder.rs  storage.rs  timeline_renderer.rs  toolbar.rs  video_processor.rs  window_snap.rs
src-tauri/src/screenshot/: annotator.rs  capture.rs  mod.rs  ocr.rs  ocr_manager.rs  ocr_provider.rs  region_selector.rs  screenshot_history.rs  window_manager.rs  windows_ocr.rs
src-tauri/src/screenshot/providers/: anthropic.rs  azure.rs  google.rs  mod.rs  ollama.rs  openai.rs  tesseract.rs  windows.rs
src-tauri/src/selection/: analyzer.rs  clipboard_context.rs  clipboard_history.rs  detector.rs  enhanced_detector.rs  expander.rs  extractor.rs  history.rs  mod.rs  mouse_hook.rs  smart_selection.rs  toolbar_window.rs  types.rs
src-tauri/src/skill/: mod.rs  scanner.rs  service.rs  types.rs
src-tauri/src/skill_seekers/: mod.rs  service.rs  types.rs
src-tauri/src/speedpass_runtime/: mod.rs  storage.rs
src-tauri/src/workflow_runtime/: constants.rs  control.rs  events.rs  expression.rs  mod.rs  model.rs  orchestrator.rs  runtime_state.rs  storage.rs  tests.rs  utils.rs
src-tauri/src/workflow_runtime/steps/: code.rs  delay.rs  input.rs  loop_step.rs  (+5 more)
(+6823 files in other folders)
