[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# MCP support dependencies
tokio = { version = "1", features = ["full", "process", "sync", "io-util"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
arboard = "3"
png = "0.17"
base64 = "0.22"
