[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

# MCP support dependencies
tokio = { version = "1", features = ["full", "process", "sync", "io-util"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
arboard = "3"
png = "0.17"
base64 = "0.22"

# Selection toolbar dependencies
rdev = "0.5"
mouse_position = "0.1"

# Regex for pattern matching
regex = "1"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3.8"
