[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
# tauri-plugin-updater = "2" # Disabled until updater is configured
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-devtools = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-stronghold = "2"

# MCP support dependencies
tokio = { version = "1", features = ["full", "process", "sync", "io-util"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
reqwest-eventsource = "0.6"
directories = "5"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
arboard = "3"
png = "0.17"
base64 = "0.22"

# Selection toolbar dependencies
rdev = "0.5"
mouse_position = "0.1"

# Regex for pattern matching
regex = "1"

# Lazy initialization
once_cell = "1.19"

# URL opening
open = "5"

# Sandbox dependencies
tempfile = "3.8"
lazy_static = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }

# Academic mode dependencies
quick-xml = "0.31"
urlencoding = "2.1"
nanoid = "0.4"

# Skill service dependencies
serde_yaml = "0.9"
zip = "2.1"

# Local provider detection
which = "6.0"

# Checksum verification
sha2 = "0.10"

# Git operations (libgit2 binding)
git2 = { version = "0.19", features = ["ssh", "https"] }

# Desktop-specific dependencies (Windows, macOS, Linux)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    # Process management features
    "Win32_System_Diagnostics_ToolHelp",
    # Windows OCR (WinRT) features
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Win32_System_WinRT",
    # IME (Input Method Editor) features
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    # Console control handler (graceful Ctrl+C exit)
    "Win32_System_Console",
] }

# Unix-specific dependencies (macOS, Linux)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[features]
default = ["single-instance"]
single-instance = []

[dev-dependencies]
tempfile = "3.8"

# Optimize scrypt for stronghold (recommended by tauri docs)
[profile.dev.package.scrypt]
opt-level = 3
