[project]
name = "cognia-plugin-sdk"
version = "1.0.0"
description = "Python SDK for creating Cognia plugins"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Cognia Team", email = "support@cognia.dev" }
]
maintainers = [
    { name = "Cognia Team", email = "support@cognia.dev" }
]
requires-python = ">=3.10"
keywords = ["cognia", "plugin", "sdk", "ai", "agent", "llm", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
cognia = "cognia.cli:main"

[project.urls]
Homepage = "https://github.com/ElementsAI-Dev/Cognia"
Documentation = "https://cognia.dev/docs/plugins/python"
Repository = "https://github.com/ElementsAI-Dev/Cognia"
Changelog = "https://github.com/ElementsAI-Dev/Cognia/blob/main/plugin-sdk/python/CHANGELOG.md"
Issues = "https://github.com/ElementsAI-Dev/Cognia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognia"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cognia",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/cognia",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/cognia"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
packages = ["src.cognia"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "PTH", "PL"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["cognia"]
